--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ Flask-WTF==1.2.2
 greenlet==3.1.1
 idna==3.10
 itsdangerous==2.2.0
+gunicorn
 Jinja2==3.1.4
 MarkupSafe==3.0.2
 psycopg2-binary==2.9.10
